# more-of-dots

./: .env.example  .gitattributes  .gitignore  AGENT.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: index.html
leaderboard-worker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
leaderboard-worker/migrations/: 0001_leaderboard.sql
leaderboard-worker/src/: index.ts
scripts/: build-sidecar.ps1  calibrate-memory.ps1  invoke-python-probe.ps1  local-runner.ps1  run-server.ps1  setup-runtime.ps1  size-audit.ps1  stage-game.ps1  sum-rb.py  version.mjs  version.test.mjs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  updates.json
src-tauri/src/: lib.rs  main.rs
src/map-editor/: App.tsx  styles.css
src/map-editor/components/: EditorScreen.tsx  MapLibrary.tsx
src/map-editor/lib/: assets.ts  constants.ts  mapCodec.ts  storage.ts  types.ts
tests/: test_address_profiles.py  test_api.py  test_desktop_cli.py  test_desktop_lifecycle.py  test_local_runner.py  test_replay.py  test_replay_simulator.py  test_stage_game.py  test_storage_cleanup.py  test_synthesis.py
tools/python-probe-dll/: Cargo.toml
tools/python-probe-dll/src/: lib.rs
wod_replay_server/: __init__.py  address_profiles.py  app.py  config.py  desktop_cli.py  local_runner.py  replay.py  replay_simulator.py  sidecar.py  stage_game.py  storage.py  synthesis.py
