[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "wod-replay-server"
version = "0.1.0"
description = "Local War of Dots replay API and logged-in session runner."
readme = "README.md"
requires-python = ">=3.13"

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30",
]
dev = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "pyinstaller>=6.0",
    "python-multipart>=0.0.9",
    "pytest>=8.3",
    "uvicorn[standard]>=0.30",
]

[tool.setuptools.packages.find]
include = ["wod_replay_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
