[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "wod-replay-server"
version = "0.1.0"
description = "Local War of Dots replay desktop runner."
readme = "README.md"
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.3",
]

[tool.setuptools.packages.find]
include = ["wod_replay_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
