[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "more-of-dots-server"
version = "1.0.0"
description = "Local More of Dots replay desktop runner."
readme = "README.md"
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.3",
]

[tool.setuptools.packages.find]
include = ["wod_replay_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
